[gd_scene load_steps=4 format=3 uid="uid://bxrl4bqkmswtx"]

[ext_resource type="Script" path="res://scripts/player.gd" id="3_vlw48"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tevmw"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m04g1"]
height = 1.2

[node name="player" type="CharacterBody3D"]
script = ExtResource("3_vlw48")

[node name="standing_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_tevmw")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.602376, 0)
shape = SubResource("CapsuleShape3D_m04g1")
disabled = true

[node name="uncrouch_check" type="RayCast3D" parent="."]
target_position = Vector3(0, 2, 0)

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Head" type="Node3D" parent="neck"]

[node name="eyes" type="Node3D" parent="neck/Head"]
transform = Transform3D(1, 0, 0, 0, 0.994656, -0.103244, 0, 0.103244, 0.994656, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="neck/Head/eyes"]
